[gd_scene load_steps=12 format=3 uid="uid://bs0lx2ya50xsy"]

[ext_resource type="Script" uid="uid://uin6g7kvlrx1" path="res://tienda.gd" id="1_yk4jq"]
[ext_resource type="AudioStream" uid="uid://caac6rhqvj27" path="res://Assets/Musicas/Cuphead OST - Porkrind's Shop [Music].mp3" id="2_3s1dv"]
[ext_resource type="Texture2D" uid="uid://bgjamgmn483dq" path="res://Assets/Tulio/Idle.png" id="2_j3fex"]
[ext_resource type="Texture2D" uid="uid://dl37hr7gwx2i6" path="res://Assets/Tienda/FondoTienda.png" id="2_k3vqj"]
[ext_resource type="Texture2D" uid="uid://cexr6oowd7ha" path="res://Assets/Amuletos/amuletocelestial.png" id="5_hf6te"]
[ext_resource type="Texture2D" uid="uid://dvwwbhlecfeva" path="res://Assets/Amuletos/amuletocomun.png" id="6_nnsdc"]
[ext_resource type="Texture2D" uid="uid://dwtt7pq6omuhj" path="res://Assets/Amuletos/amuletoexotico.png" id="7_1ieev"]
[ext_resource type="Texture2D" uid="uid://c41yiq1c787f1" path="res://Assets/Amuletos/amuletomasplata.png" id="8_fs1ct"]
[ext_resource type="Texture2D" uid="uid://bm2qtf1ffibbc" path="res://Assets/Amuletos/amuletosecreto.png" id="9_1ieev"]
[ext_resource type="Texture2D" uid="uid://3m2t4d41dgt2" path="res://Assets/Amuletos/amuletoraro.png" id="10_fs1ct"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ieev"]
bg_color = Color(1.46498e-06, 0.00195757, 0.02428, 0.796078)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
corner_detail = 6

[node name="Tienda" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yk4jq")
pos_normal = Vector2(850, 450)
pos_bienvenida = Vector2(850, 450)
pos_despedida = Vector2(849, 460)
pos_reaccion = Vector2(850, 450)

[node name="Fondo" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = -5.0
offset_right = 1027.0
offset_bottom = 1019.0
scale = Vector2(1.12044, 0.668824)
texture = ExtResource("2_k3vqj")

[node name="Tulio" type="Sprite2D" parent="."]
position = Vector2(824, 530)
scale = Vector2(0.6, 0.617)
texture = ExtResource("2_j3fex")

[node name="LabelDoblones" type="Label" parent="."]
layout_mode = 0
offset_left = 68.0
offset_top = 34.0
offset_right = 108.0
offset_bottom = 57.0
scale = Vector2(1.47168, 1.4708)

[node name="Salir" type="Button" parent="."]
layout_mode = 0
offset_left = 927.0
offset_top = 23.0
offset_right = 1116.0
offset_bottom = 159.0
scale = Vector2(1, 0.967945)
text = "Volver"

[node name="AudioEfectos" type="AudioStreamPlayer" parent="."]
volume_db = 8.0

[node name="AudioTienda" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_3s1dv")

[node name="Estanteria" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 61.0
offset_top = 74.0
offset_right = 231.0
offset_bottom = 318.0
scale = Vector2(3.39322, 2.45708)
columns = 2

[node name="Articulo1" type="TextureButton" parent="Estanteria"]
layout_mode = 2
texture_normal = ExtResource("5_hf6te")

[node name="Articulo2" type="TextureButton" parent="Estanteria"]
layout_mode = 2
texture_normal = ExtResource("6_nnsdc")

[node name="Articulo3" type="TextureButton" parent="Estanteria"]
layout_mode = 2
texture_normal = ExtResource("7_1ieev")

[node name="Articulo4" type="TextureButton" parent="Estanteria"]
layout_mode = 2
texture_normal = ExtResource("8_fs1ct")

[node name="Articulo5" type="TextureButton" parent="Estanteria"]
layout_mode = 2
texture_normal = ExtResource("9_1ieev")

[node name="Articulo6" type="TextureButton" parent="Estanteria"]
layout_mode = 2
texture_normal = ExtResource("10_fs1ct")

[node name="PanelInfo" type="Panel" parent="."]
layout_mode = 0
offset_left = 499.0
offset_top = 164.0
offset_right = 499.0
offset_bottom = 164.0
scale = Vector2(0.849193, 0.900873)
theme_override_styles/panel = SubResource("StyleBoxFlat_1ieev")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelInfo"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LabelNombre" type="Label" parent="PanelInfo/VBoxContainer"]
layout_mode = 2

[node name="LabelPrecio" type="Label" parent="PanelInfo/VBoxContainer"]
layout_mode = 2

[node name="LabelEfecto" type="Label" parent="PanelInfo/VBoxContainer"]
layout_mode = 2
